wprking background/font

--- a/client-messagethroughtime/public/styles.css
+++ b/client-messagethroughtime/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #0000; /* Black background */
-    color: #00FF00; /* Green text color */
+    background-color: #000000; /* Black background */
+    color: #01bd01; /* Green text color */
     font-family: "Audiowide", sans-serif; /* Use Audiowide font */
 }
