--- a/client-messagethroughtime/public/styles.css
+++ b/client-messagethroughtime/public/styles.css
@@ -1,18 +1,34 @@
+.container{
+    font-family: "Audiowide", sans-serif; /* Use Audiowide font */
+    font-size: 24px;
+    display: grid;
+    place-items: center;
+    width: 350px;
+  }
+  
+  .typed {
+    overflow: hidden;
+    white-space: nowrap;
+    border-right: 2px solid;
+    width: 0;
+    animation: typing 1.5s steps(30, end) forwards, blinking 1s infinite;
+  }
+    
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  
+  @keyframes blinking {
+    0% {border-color: transparent}
+    50% {border-color: #01bd01}
+    100% {border-color: transparent}
+  }
 body {
     background-color: #000000; /* Black background */
     color: #01bd01; /* Green text color */
-    font-family: "Audiowide", sans-serif; /* Use Audiowide font */
+    
     text-align: center;
-    animation: typing 2s steps(40, end), blink-caret .75s step-end infinite;
 }
-span {
-    opacity: 0;
-    animation: typing 0.2s linear 0.2s;
-  }
-  
-  @keyframes typing {
-    from { opacity: 0; }
-    to { opacity: 1; }
-  }
   
   
